[project]
name = "ara"
version = "0.1.0"
description = "The Autonomous Regulatory Auditor (ARA) is an agentic AI system built with LangGraph designed to audit business documents against Southeast Asian legal frameworks using a multi-agent approach (researcher, critic, solicitor). It provides legal compliance checks, highlights risks, and suggests revisions, featuring a human-in-the-loop workflow and RAG-based source citation for high accuracy."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-groq>=0.2.0",
    "langgraph>=0.2.0",
    "langchain-qdrant>=0.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.17.1",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "pyyaml>=6.0.2",
    "lxml>=5.3.0",
    "beautifulsoup4>=4.13.0",
    "nltk>=3.9.1",
    "spacy>=3.8.0",
    "sentence-transformers>=3.3.0",
    "rank-bm25>=0.2.2",
    "python-multipart>=0.0.17",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "rich>=13.9.0",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langchain-core>=1.2.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "isort>=5.13.0",
    "mypy>=1.13.0",
    "ruff>=0.7.0",
]
